<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.login">

        <!--Set starting borders for elements -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <!--Set starting borders for elements -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".06" />

        <!--Set ending borders for elements -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


        <!--putting image -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/layou_margin"
            app:layout_constraintBottom_toBottomOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/men" />

        <!--putting edit text to write email -->

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layou_margin"
                app:layout_constraintEnd_toEndOf="@id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_or_email"
                    android:inputType="textEmailAddress" />


            </com.google.android.material.textfield.TextInputLayout>
        <!--putting edit text to password -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                app:layout_constraintEnd_toEndOf="@id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textWebPassword" />


            </com.google.android.material.textfield.TextInputLayout>

        <!--putting buttin to navigate screen welcome -->

        <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintEnd_toStartOf="@id/login_register"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/passwword"
            style="@style/StyleButton" />

            <Button
                android:id="@+id/login_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/regster"
                style="@style/StyleButton"
                app:layout_constraintEnd_toEndOf="@id/guideline4"
                app:layout_constraintStart_toEndOf="@id/login_button"
                app:layout_constraintTop_toBottomOf="@id/passwword" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>