<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Welcome.Welcome">

        <!--Set starting borders for elements -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.16" />

        <!--Set ending borders for elements -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.66" />

<!--putting image  -->
        <ImageView
            android:id="@+id/image_welcome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/logo"
            android:layout_margin="@dimen/layou_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline6" />

        <!--putting text  -->

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/big_Text"
            android:textColor="@color/design_default_color_primary_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_welcome" />

        <TextView
            android:id="@+id/welcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_shoe_store"
            android:textSize="@dimen/big_Text"
            android:textColor="@color/design_default_color_primary_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <!--putting button to navigation onbording screen  -->
        <Button
            android:id="@+id/continue_scrren"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:text="@string/conrinue_screen"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome2" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>